# video-service/api/video/v1/video_grpc.pb.go
@@ -19,11 +19,14 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	VideoService_CreateVideo_FullMethodName       = "/video.VideoService/CreateVideo"
-	VideoService_ListUserVideos_FullMethodName    = "/video.VideoService/ListUserVideos"
-	VideoService_UploadVideo_FullMethodName       = "/video.VideoService/UploadVideo"
-	VideoService_BatchGetVideoInfo_FullMethodName = "/video.VideoService/BatchGetVideoInfo"
-	VideoService_CheckVideoExists_FullMethodName  = "/video.VideoService/CheckVideoExists"
+	VideoService_CreateVideo_FullMethodName                     = "/video.VideoService/CreateVideo"
+	VideoService_ListUserVideos_FullMethodName                  = "/video.VideoService/ListUserVideos"
+	VideoService_UploadVideo_FullMethodName                     = "/video.VideoService/UploadVideo"
+	VideoService_BatchGetVideoInfo_FullMethodName               = "/video.VideoService/BatchGetVideoInfo"
+	VideoService_CheckVideoExists_FullMethodName                = "/video.VideoService/CheckVideoExists"
+	VideoService_CalcVideoScore_FullMethodName                  = "/video.VideoService/CalcVideoScore"
+	VideoService_GetVideoFavoriteAndCommentCount_FullMethodName = "/video.VideoService/GetVideoFavoriteAndCommentCount"
+	VideoService_GetVideoByTitle_FullMethodName                 = "/video.VideoService/GetVideoByTitle"
 )
 
 // VideoServiceClient is the client API for VideoService service.
@@ -40,6 +43,9 @@ type VideoServiceClient interface {
 	BatchGetVideoInfo(ctx context.Context, in *BatchGetVideoInfoRequest, opts ...grpc.CallOption) (*BatchGetVideoInfoReply, error)
 	// 检查视频是否存在
 	CheckVideoExists(ctx context.Context, in *CheckVideoExistsRequest, opts ...grpc.CallOption) (*CheckVideoExistsReply, error)
+	CalcVideoScore(ctx context.Context, in *CalcVideoScoreRequest, opts ...grpc.CallOption) (*CalcVideoScoreReply, error)
+	GetVideoFavoriteAndCommentCount(ctx context.Context, in *GetVideoFavoriteAndCommentCountRequest, opts ...grpc.CallOption) (*GetVideoFavoriteAndCommentCountReply, error)
+	GetVideoByTitle(ctx context.Context, in *GetVideoByTitleRequest, opts ...grpc.CallOption) (*GetVideoByTitleReply, error)
 }
 
 type videoServiceClient struct {
@@ -100,6 +106,36 @@ func (c *videoServiceClient) CheckVideoExists(ctx context.Context, in *CheckVide
 	return out, nil
 }
 
+func (c *videoServiceClient) CalcVideoScore(ctx context.Context, in *CalcVideoScoreRequest, opts ...grpc.CallOption) (*CalcVideoScoreReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CalcVideoScoreReply)
+	err := c.cc.Invoke(ctx, VideoService_CalcVideoScore_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *videoServiceClient) GetVideoFavoriteAndCommentCount(ctx context.Context, in *GetVideoFavoriteAndCommentCountRequest, opts ...grpc.CallOption) (*GetVideoFavoriteAndCommentCountReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetVideoFavoriteAndCommentCountReply)
+	err := c.cc.Invoke(ctx, VideoService_GetVideoFavoriteAndCommentCount_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *videoServiceClient) GetVideoByTitle(ctx context.Context, in *GetVideoByTitleRequest, opts ...grpc.CallOption) (*GetVideoByTitleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetVideoByTitleReply)
+	err := c.cc.Invoke(ctx, VideoService_GetVideoByTitle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // VideoServiceServer is the server API for VideoService service.
 // All implementations must embed UnimplementedVideoServiceServer
 // for forward compatibility.
@@ -114,6 +150,9 @@ type VideoServiceServer interface {
 	BatchGetVideoInfo(context.Context, *BatchGetVideoInfoRequest) (*BatchGetVideoInfoReply, error)
 	// 检查视频是否存在
 	CheckVideoExists(context.Context, *CheckVideoExistsRequest) (*CheckVideoExistsReply, error)
+	CalcVideoScore(context.Context, *CalcVideoScoreRequest) (*CalcVideoScoreReply, error)
+	GetVideoFavoriteAndCommentCount(context.Context, *GetVideoFavoriteAndCommentCountRequest) (*GetVideoFavoriteAndCommentCountReply, error)
+	GetVideoByTitle(context.Context, *GetVideoByTitleRequest) (*GetVideoByTitleReply, error)
 	mustEmbedUnimplementedVideoServiceServer()
 }
 
@@ -138,6 +177,15 @@ func (UnimplementedVideoServiceServer) BatchGetVideoInfo(context.Context, *Batch
 }
 func (UnimplementedVideoServiceServer) CheckVideoExists(context.Context, *CheckVideoExistsRequest) (*CheckVideoExistsReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CheckVideoExists not implemented")
+}
+func (UnimplementedVideoServiceServer) CalcVideoScore(context.Context, *CalcVideoScoreRequest) (*CalcVideoScoreReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CalcVideoScore not implemented")
+}
+func (UnimplementedVideoServiceServer) GetVideoFavoriteAndCommentCount(context.Context, *GetVideoFavoriteAndCommentCountRequest) (*GetVideoFavoriteAndCommentCountReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetVideoFavoriteAndCommentCount not implemented")
+}
+func (UnimplementedVideoServiceServer) GetVideoByTitle(context.Context, *GetVideoByTitleRequest) (*GetVideoByTitleReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetVideoByTitle not implemented")
 }
 func (UnimplementedVideoServiceServer) mustEmbedUnimplementedVideoServiceServer() {}
 func (UnimplementedVideoServiceServer) testEmbeddedByValue()                      {}
@@ -250,6 +298,60 @@ func _VideoService_CheckVideoExists_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
+func _VideoService_CalcVideoScore_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CalcVideoScoreRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(VideoServiceServer).CalcVideoScore(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: VideoService_CalcVideoScore_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(VideoServiceServer).CalcVideoScore(ctx, req.(*CalcVideoScoreRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _VideoService_GetVideoFavoriteAndCommentCount_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetVideoFavoriteAndCommentCountRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(VideoServiceServer).GetVideoFavoriteAndCommentCount(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: VideoService_GetVideoFavoriteAndCommentCount_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(VideoServiceServer).GetVideoFavoriteAndCommentCount(ctx, req.(*GetVideoFavoriteAndCommentCountRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _VideoService_GetVideoByTitle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetVideoByTitleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(VideoServiceServer).GetVideoByTitle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: VideoService_GetVideoByTitle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(VideoServiceServer).GetVideoByTitle(ctx, req.(*GetVideoByTitleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // VideoService_ServiceDesc is the grpc.ServiceDesc for VideoService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -276,6 +378,18 @@ var VideoService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CheckVideoExists",
 			Handler:    _VideoService_CheckVideoExists_Handler,
+		},
+		{
+			MethodName: "CalcVideoScore",
+			Handler:    _VideoService_CalcVideoScore_Handler,
+		},
+		{
+			MethodName: "GetVideoFavoriteAndCommentCount",
+			Handler:    _VideoService_GetVideoFavoriteAndCommentCount_Handler,
+		},
+		{
+			MethodName: "GetVideoByTitle",
+			Handler:    _VideoService_GetVideoByTitle_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
